# Snow_Flake_Queries

./: README.md  pyproject.toml
config/.ipynb_checkpoints/: codeartifact-auth-checkpoint.sh
nbs/: snowflake_MFI_quiries.ipynb  snowflake_memberships_quiries.ipynb
nbs/.ipynb_checkpoints/: snowflake_memberships_quiries-checkpoint.ipynb
