[project]
name = "snow-flake-queries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.7.0",
    "imu-snowflake-main>=468",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "s3fs>=2025.7.0",
]

[tool.uv.sources]
imu-snowflake-main = { index = "aws" }

[[tool.uv.index]]
url = "https://imu-257033705919.d.codeartifact.eu-west-1.amazonaws.com/pypi/imu/simple/"
name = "aws"
